test: Test to ensure template fields are selected